// Copyright 2021 Lightbend Inc.

syntax = "proto3";

package actionspec;
option java_package = "com.akkaserverless.javasdk.actionspec";

import "google/protobuf/any.proto";

message In {
    string field = 1;
}

message Out {
    string field = 1;
}

service ActionSpecService {
    rpc Unary(In) returns (Out);
    rpc UnaryJson(In) returns (google.protobuf.Any);
    rpc StreamedIn(stream In) returns (Out);
    rpc StreamedOut(In) returns (stream Out);
    rpc StreamedJsonOut(In) returns (stream google.protobuf.Any);
    rpc Streamed(stream In) returns (stream Out);
}
